force-app/main/default/objects/PBS_Leasing_Dynamic_Datatable__mdt/PBS_Leasing_Dynamic_Datatable__mdt.object-meta.xml
<CustomObject>
    <label>Dynamic Datatable</label>
    <pluralLabel>Dynamic Datatables</pluralLabel>
</CustomObject>