force-app/main/default/objects/PBS_Leasing_Dynamic_Datatable__mdt/fields/Filter__c.field-meta.xml
<CustomField>
    <fullName>Filter__c</fullName>
    <label>Filter</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>