force-app/main/default/objects/PBS_Leasing_Dynamic_Datatable__mdt/fields/PBS_Leasing_Related_Field_API_Name__c.field-meta.xml
<CustomField>
    <fullName>PBS_Leasing_Related_Field_API_Name__c</fullName>
    <label>Related Field API Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>